RESOLVED FIXED107119
[EFL][WK2] Fix misuse of ASSERT on ecore_evas_init()
https://bugs.webkit.org/show_bug.cgi?id=107119
Summary [EFL][WK2] Fix misuse of ASSERT on ecore_evas_init()
Sudarsana Nagineni (babu)
Reported 2013-01-17 05:15:24 PST
Noticed a crash on release build while running the WebKit2 API test (test_webkit2_api_UserMessage). The reason for this crash is that Ecore_Evas is not initialized on released builds since we are using ASSERT on ecore_evas_init(). CRI: ecore_evas.c:864 ecore_evas_new() eina_log_print() unknown domain -1, original message format 'using engine '%s', extra_options=%s' ERR<15581>:ecore ecore.c:558 _ecore_magic_fail() *** ECORE ERROR: Ecore Magic Check Failed!!! *** IN FUNCTION: ecore_evas_show() ERR<15581>:ecore ecore.c:560 _ecore_magic_fail() Input handle pointer is NULL! ERR<15581>:ecore ecore.c:571 _ecore_magic_fail() *** NAUGHTY PROGRAMMER!!! *** SPANK SPANK SPANK!!! *** Now go fix your code. Tut tut tut! ERR<15581>:ecore ecore.c:558 _ecore_magic_fail() *** ECORE ERROR: Ecore Magic Check Failed!!! *** IN FUNCTION: ecore_evas_get() ERR<15581>:ecore ecore.c:560 _ecore_magic_fail() Input handle pointer is NULL! ERR<15581>:ecore ecore.c:571 _ecore_magic_fail() *** NAUGHTY PROGRAMMER!!! *** SPANK SPANK SPANK!!! *** Now go fix your code. Tut tut tut! ERR<15581>: WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:509 createEwkView() safety check failed: canvas == NULL CRI<15581>: WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:669 ewk_view_theme_set() null is not a ewk_view CRI<15581>: WebKit/Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:669 ewk_view_theme_set() no smart data for object (nil) ((null)) 1 0x413e98 2 0x7f43ec95dcb0 3 0x7f43ece7b9a9 EwkViewImpl::fromEvasObject(_Evas_Object const*) 4 0x7f43ece7b0d9 WKViewGetPage 5 0x4113da TestWebKitAPI::WebKit2UserMessageRoundTripTest::SetUp() 6 0x7f43ed14ce83 testing::Test::Run() 7 0x7f43ed14cfe8 testing::internal::TestInfoImpl::Run() 8 0x7f43ed14d0a5 testing::TestCase::Run() 9 0x7f43ed14d3de testing::internal::UnitTestImpl::RunAllTests() 10 0x413862 TestWebKitAPI::TestsController::run(int, char**) 11 0x412fd9 main 12 0x7f43eb67c76d __libc_start_main 13 0x410a79
Attachments
Patch (1.91 KB, patch)
2013-01-17 05:33 PST, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2013-01-17 05:33:20 PST
Laszlo Gombos
Comment 2 2013-01-17 08:35:53 PST
Comment on attachment 183170 [details] Patch r=me.
WebKit Review Bot
Comment 3 2013-01-17 11:07:42 PST
Comment on attachment 183170 [details] Patch Clearing flags on attachment: 183170 Committed r140004: <http://trac.webkit.org/changeset/140004>
WebKit Review Bot
Comment 4 2013-01-17 11:07:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.