[EFL][WK2] Fix misuse of ASSERT on ecore_evas_init() https://bugs.webkit.org/show_bug.cgi?id=107119

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-01-17
Reviewed by Laszlo Gombos.

Do not use ASSERT on ecore_evas_init(), since the expression inside
the macro compiles out of release builds.

* TestWebKitAPI/PlatformEfl.cmake: Enable API test UserMessage.
* TestWebKitAPI/efl/PlatformWebView.cpp:
(TestWebKitAPI::initEcoreEvas): Remove ASSERT on ecore_evas_init().

Canonical link: https://commits.webkit.org/125377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140004 268f45cc-cd09-0410-ab3c-d52691b4dbfc